--- a/OlderVersion/decisionTree.ipynb
+++ b/OlderVersion/decisionTree.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_8256\\2973693714.py:1: DeprecationWarning: \n",
+      "C:\\Users\\cheng\\AppData\\Local\\Temp\\ipykernel_28376\\2973693714.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -24,14 +24,14 @@
      "output_type": "stream",
      "text": [
       "Best Hyperparameters: {'classifier__max_depth': None, 'classifier__min_samples_leaf': 2, 'classifier__min_samples_split': 5}\n",
-      "Accuracy with Best Hyperparameters: 0.494791054713508\n",
+      "Accuracy with Best Hyperparameters: 0.49719970234598365\n",
       "Confusion Matrix:\n",
-      "[[13698 11840]\n",
-      " [13959 11569]]\n",
+      "[[13801 11737]\n",
+      " [13939 11589]]\n",
       "Applicant 1: Not Eligible for loan\n",
-      "Applicant 2: Not Eligible for loan\n",
+      "Applicant 2: Eligible for loan\n",
       "Applicant 3: Not Eligible for loan\n",
-      "Applicant 4: Not Eligible for loan\n",
+      "Applicant 4: Eligible for loan\n",
       "Applicant 5: Eligible for loan\n",
       "Applicant 6: Eligible for loan\n",
       "Applicant 7: Not Eligible for loan\n",
@@ -44,10 +44,10 @@
       "Applicant 14: Eligible for loan\n",
       "Applicant 15: Eligible for loan\n",
       "Applicant 16: Not Eligible for loan\n",
-      "Applicant 17: Not Eligible for loan\n",
-      "Applicant 18: Not Eligible for loan\n",
+      "Applicant 17: Eligible for loan\n",
+      "Applicant 18: Eligible for loan\n",
       "Applicant 19: Not Eligible for loan\n",
-      "Applicant 20: Not Eligible for loan\n"
+      "Applicant 20: Eligible for loan\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
