--- a/KNNalgo.ipynb
+++ b/KNNalgo.ipynb
@@ -2,36 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_14172\\351858294.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#Import modules and load using pandas\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "from matplotlib import pyplot as plt\n",
     "import matplotlib as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +201,7 @@
        "4          No        0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,9 +213,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['No', 'Yes'], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['HasDependents'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_15200\\2144725232.py:19: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  selected_columns['Education'] = selected_columns['Education'].map(education_mapping)\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_15200\\2144725232.py:22: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  selected_columns['EmploymentType'] = selected_columns['EmploymentType'].map(employment_mapping)\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_15200\\2144725232.py:25: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  selected_columns['MaritalStatus'] = selected_columns['MaritalStatus'].map(marital_mapping)\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_15200\\2144725232.py:28: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  selected_columns['HasMortgage'] = selected_columns['HasMortgage'].map(mortgage_mapping)\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_15200\\2144725232.py:30: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  selected_columns['HasDependents'] = selected_columns['HasDependents'].map(dependent_mapping)\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_15200\\2144725232.py:32: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  selected_columns['LoanPurpose'] = selected_columns['LoanPurpose'].map(loan_mapping)\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_15200\\2144725232.py:34: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  selected_columns['HasCoSigner'] = selected_columns['HasCoSigner'].map(cosigner_mapping)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -265,6 +319,7 @@
        "      <th>MaritalStatus</th>\n",
        "      <th>HasMortgage</th>\n",
        "      <th>HasDependents</th>\n",
+       "      <th>LoanPurpose</th>\n",
        "      <th>HasCoSigner</th>\n",
        "      <th>Default</th>\n",
        "    </tr>\n",
@@ -281,12 +336,13 @@
        "      <td>9.08</td>\n",
        "      <td>48</td>\n",
        "      <td>0.23</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -300,12 +356,13 @@
        "      <td>5.84</td>\n",
        "      <td>36</td>\n",
        "      <td>0.80</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -319,12 +376,13 @@
        "      <td>9.73</td>\n",
        "      <td>60</td>\n",
        "      <td>0.45</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -338,12 +396,13 @@
        "      <td>3.58</td>\n",
        "      <td>24</td>\n",
        "      <td>0.73</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -357,12 +416,13 @@
        "      <td>5.63</td>\n",
        "      <td>48</td>\n",
        "      <td>0.20</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -378,18 +438,18 @@
        "4   57  139699       88143          635             112               4   \n",
        "\n",
        "   InterestRate  LoanTerm  DTIRatio  Education  EmploymentType  MaritalStatus  \\\n",
-       "0          9.08        48      0.23        NaN             NaN            NaN   \n",
-       "1          5.84        36      0.80        NaN             NaN            NaN   \n",
-       "2          9.73        60      0.45        NaN             NaN            NaN   \n",
-       "3          3.58        24      0.73        NaN             NaN            NaN   \n",
-       "4          5.63        48      0.20        NaN             NaN            NaN   \n",
+       "0          9.08        48      0.23          0               0              1   \n",
+       "1          5.84        36      0.80          3               2              2   \n",
+       "2          9.73        60      0.45          2               2              2   \n",
+       "3          3.58        24      0.73          0               0              0   \n",
+       "4          5.63        48      0.20          2               1              2   \n",
        "\n",
-       "   HasMortgage  HasDependents  HasCoSigner  Default  \n",
-       "0          NaN            NaN          NaN        0  \n",
-       "1          NaN            NaN          NaN        1  \n",
-       "2          NaN            NaN          NaN        0  \n",
-       "3          NaN            NaN          NaN        0  \n",
-       "4          NaN            NaN          NaN        0  "
+       "   HasMortgage  HasDependents  LoanPurpose  HasCoSigner  Default  \n",
+       "0            0              0            0            0        0  \n",
+       "1            0              0            0            1        1  \n",
+       "2            1              0            1            1        0  \n",
+       "3            0              0            1            1        0  \n",
+       "4            0              0            2            0        0  "
       ]
      },
      "execution_count": 6,
@@ -398,29 +458,103 @@
     }
    ],
    "source": [
+    "# Mapping the categorical to numerical \n",
+    "# Selecting variables \n",
+    "# Dropped the LoanID\n",
+    "# Define the mappings\n",
     "education_mapping = {'High School': 0, \"Bachelor's\": 1, \"Master's\": 2, 'PhD': 3}\n",
     "employment_mapping = {'Unemployed': 0, 'Part-time': 1, 'Full-time': 2, 'Self-employed': 3}\n",
     "marital_mapping = {'Single': 0, 'Married': 1, 'Divorced': 2}\n",
     "mortgage_mapping = {'Yes': 1, 'No': 0}\n",
-    "dependents_mapping = {'Yes': 1, 'No': 0}\n",
-    "cosigner_mapping = {'Yes': 1, 'No': 0}\n",
+    "dependent_mapping ={'Yes': 1, 'No':0}\n",
+    "loan_mapping ={'Education':0, 'Auto':1, 'Home':2, 'Other':3, 'Business':4}\n",
+    "cosigner_mapping={'Yes': 1, 'No':0}\n",
     "\n",
-    "# Select specified columns\n",
-    "selected_columns = df[[\"Age\", \"Income\", \"LoanAmount\", \"CreditScore\", \"MonthsEmployed\", \"NumCreditLines\", \"InterestRate\", \"LoanTerm\", \"DTIRatio\", \n",
-    "                       \"Education\", \"EmploymentType\", \"MaritalStatus\", \"HasMortgage\", \"HasDependents\", \"HasCoSigner\", \"Default\"]]\n",
+    "# Select the specified columns\n",
+    "selected_columns = df[[\"Age\", \"Income\", \"LoanAmount\", \"CreditScore\",\"MonthsEmployed\",\"NumCreditLines\",\"InterestRate\",\"LoanTerm\",\"DTIRatio\", \n",
+    "                       \"Education\", \"EmploymentType\", \"MaritalStatus\", \n",
+    "                       \"HasMortgage\",\"HasDependents\",\"LoanPurpose\",\"HasCoSigner\",\"Default\"]]\n",
     "\n",
-    "# Map the columns\n",
+    "# Map the education column\n",
     "selected_columns['Education'] = selected_columns['Education'].map(education_mapping)\n",
+    "\n",
+    "# Map the employment column\n",
     "selected_columns['EmploymentType'] = selected_columns['EmploymentType'].map(employment_mapping)\n",
+    "\n",
+    "# Map the marital status column\n",
     "selected_columns['MaritalStatus'] = selected_columns['MaritalStatus'].map(marital_mapping)\n",
+    "\n",
+    "# Map the HasMortgage column\n",
     "selected_columns['HasMortgage'] = selected_columns['HasMortgage'].map(mortgage_mapping)\n",
-    "selected_columns['HasDependents'] = selected_columns['HasDependents'].map(dependents_mapping)\n",
+    "\n",
+    "selected_columns['HasDependents'] = selected_columns['HasDependents'].map(dependent_mapping)\n",
+    "\n",
+    "selected_columns['LoanPurpose'] = selected_columns['LoanPurpose'].map(loan_mapping)\n",
+    "\n",
     "selected_columns['HasCoSigner'] = selected_columns['HasCoSigner'].map(cosigner_mapping)\n",
     "\n",
-    "\n",
     "df =selected_columns\n",
-    "df.head()\n",
-    "\n"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((204261, 16), (51066, 16), (204261,), (51066,))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split \n",
+    "  \n",
+    "X = df.drop(['Default'],axis=1) \n",
+    "Y = df['Default'] \n",
+    "X.shape,Y.shape \n",
+    "  \n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, \n",
+    "                                                    test_size=0.2, \n",
+    "                                                    random_state=42) \n",
+    "X_train.shape, X_test.shape, Y_train.shape, Y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from sklearn.neighbors import KNeighborsClassifier \n",
+    "from sklearn.ensemble import RandomForestClassifier \n",
+    "from sklearn.svm import SVC \n",
+    "from sklearn.linear_model import LogisticRegression \n",
+    "  \n",
+    "from sklearn import metrics \n",
+    "  \n",
+    "knn = KNeighborsClassifier(n_neighbors=3) \n",
+    "rfc = RandomForestClassifier(n_estimators = 7, \n",
+    "                             criterion = 'entropy', \n",
+    "                             random_state =7) \n",
+    "svc = SVC() \n",
+    "lc = LogisticRegression() \n",
+    "  \n",
+    "# making predictions on the training set \n",
+    "for clf in (rfc, knn, svc,lc): \n",
+    "    clf.fit(X_train, Y_train) \n",
+    "    Y_pred = clf.predict(X_train) \n",
+    "    print(\"Accuracy score of \", \n",
+    "          clf.__class__.__name__, \n",
+    "          \"=\",100*metrics.accuracy_score(Y_train,  \n",
+    "                                         Y_pred))"
    ]
   }
  ],
@@ -440,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
