--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -1114,12 +1114,16 @@
    "source": [
     "trained_classifiers = {}\n",
     "for name, clf in classifiers.items():\n",
+    "    start_time = time.time()  # Start timing\n",
     "    clf.fit(X_train, y_train)\n",
+    "    end_time = time.time()  # End timing\n",
+    "    training_time = end_time - start_time  # Calculate elapsed time\n",
     "    y_pred = clf.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test, y_pred)\n",
     "    f1 = f1_score(y_test, y_pred)\n",
     "    cm = confusion_matrix(y_test, y_pred)\n",
     "    print(name, \":\")\n",
+    "    print(\"Training Time:\", training_time, \"seconds\")\n",
     "    print(\"Accuracy:\", 100 * accuracy)\n",
     "    print(\"F1 Score:\", f1)\n",
     "    print(\"Confusion Matrix:\")\n",
