--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "False"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        "((255327, 16), (255327,))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
        "((361258, 16), (90100, 16), (361258,), (90100,))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -689,6 +689,7 @@
      "output_type": "stream",
      "text": [
       "K-Neighbors Classifier :\n",
+      "Training Time: 0.0009961128234863281 seconds\n",
       "Accuracy: 68.49390919158361\n",
       "F1 Score: 0.6652941176470588\n",
       "Confusion Matrix:\n",
@@ -696,6 +697,7 @@
       " [ 619 1131]]\n",
       "\n",
       "Random Forest Classifier :\n",
+      "Training Time: 0.05234694480895996 seconds\n",
       "Accuracy: 98.47729789590255\n",
       "F1 Score: 0.9842722333428653\n",
       "Confusion Matrix:\n",
@@ -703,6 +705,7 @@
       " [  29 1721]]\n",
       "\n",
       "Logistic Regression :\n",
+      "Training Time: 0.04186058044433594 seconds\n",
       "Accuracy: 66.36212624584718\n",
       "F1 Score: 0.6477239779646274\n",
       "Confusion Matrix:\n",
@@ -710,12 +713,14 @@
       " [ 633 1117]]\n",
       "\n",
       "Decision Tree Classifier :\n",
+      "Training Time: 0.026422977447509766 seconds\n",
       "Accuracy: 100.0\n",
       "F1 Score: 1.0\n",
       "Confusion Matrix:\n",
       "[[1862    0]\n",
       " [   0 1750]]\n",
-      "\n"
+      "\n",
+      "XGBoost Classifier"
      ]
     },
     {
@@ -736,7 +741,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XGBoost Classifier :\n",
+      " :\n",
+      "Training Time: 0.0991983413696289 seconds\n",
       "Accuracy: 100.0\n",
       "F1 Score: 1.0\n",
       "Confusion Matrix:\n",
@@ -744,6 +750,7 @@
       " [   0 1750]]\n",
       "\n",
       "Gaussian Naive Bayes :\n",
+      "Training Time: 0.002989053726196289 seconds\n",
       "Accuracy: 73.9202657807309\n",
       "F1 Score: 0.7502651113467657\n",
       "Confusion Matrix:\n",
@@ -751,6 +758,7 @@
       " [ 335 1415]]\n",
       "\n",
       "MLPClassifier :\n",
+      "Training Time: 0.2297959327697754 seconds\n",
       "Accuracy: 56.644518272425245\n",
       "F1 Score: 0.5300120048019208\n",
       "Confusion Matrix:\n",
@@ -805,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -885,14 +893,19 @@
     }
    ],
    "source": [
+    "\n",
     "# making predictions on the testing set \n",
     "for name, clf in classifiers.items():\n",
+    "    start_time = time.time()  # Start timing\n",
     "    clf.fit(X_train_sample, y_train_sample)\n",
+    "    end_time = time.time()  # End timing\n",
+    "    training_time = end_time - start_time  # Calculate elapsed time\n",
     "    y_pred = clf.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test, y_pred)\n",
     "    f1 = f1_score(y_test, y_pred)\n",
     "    cm = confusion_matrix(y_test, y_pred)\n",
     "    print(name, \":\")\n",
+    "    print(\"Training Time:\", training_time, \"seconds\")\n",
     "    print(\"Accuracy:\", 100 * accuracy)\n",
     "    print(\"F1 Score:\", f1)\n",
     "    print(\"Confusion Matrix:\")\n",
@@ -909,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1032,6 +1045,7 @@
      "output_type": "stream",
      "text": [
       "K-Neighbors Classifier :\n",
+      "Training Time: 0.046362876892089844 seconds\n",
       "Accuracy: 53.00554938956715\n",
       "F1 Score: 0.4693984962406015\n",
       "Confusion Matrix:\n",
@@ -1039,6 +1053,7 @@
       " [26321 18729]]\n",
       "\n",
       "Random Forest Classifier :\n",
+      "Training Time: 7.295191526412964 seconds\n",
       "Accuracy: 82.72031076581577\n",
       "F1 Score: 0.818553697336985\n",
       "Confusion Matrix:\n",
@@ -1051,7 +1066,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\User\\anaconda3\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "c:\\Users\\cheng\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
       "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
@@ -1066,13 +1081,15 @@
      "output_type": "stream",
      "text": [
       "Logistic Regression :\n",
-      "Accuracy: 67.65482796892341\n",
-      "F1 Score: 0.6779601082932759\n",
+      "Training Time: 1.5737738609313965 seconds\n",
+      "Accuracy: 67.67036625971143\n",
+      "F1 Score: 0.6781930466100291\n",
       "Confusion Matrix:\n",
-      "[[30281 14769]\n",
-      " [14374 30676]]\n",
+      "[[30277 14773]\n",
+      " [14356 30694]]\n",
       "\n",
       "Decision Tree Classifier :\n",
+      "Training Time: 3.9854869842529297 seconds\n",
       "Accuracy: 78.55382907880133\n",
       "F1 Score: 0.7805227110096432\n",
       "Confusion Matrix:\n",
@@ -1080,13 +1097,15 @@
       " [10691 34359]]\n",
       "\n",
       "XGBoost Classifier :\n",
-      "Accuracy: 91.26748057713652\n",
-      "F1 Score: 0.9080518873436952\n",
+      "Training Time: 0.7998838424682617 seconds\n",
+      "Accuracy: 89.49500554938957\n",
+      "F1 Score: 0.8895243653341115\n",
       "Confusion Matrix:\n",
-      "[[43381  1669]\n",
-      " [ 6199 38851]]\n",
+      "[[42530  2520]\n",
+      " [ 6945 38105]]\n",
       "\n",
       "Gaussian Naive Bayes :\n",
+      "Training Time: 0.11513829231262207 seconds\n",
       "Accuracy: 73.6992230854606\n",
       "F1 Score: 0.7565918545529249\n",
       "Confusion Matrix:\n",
@@ -1094,11 +1113,12 @@
       " [ 8221 36829]]\n",
       "\n",
       "MLPClassifier :\n",
-      "Accuracy: 77.79578246392896\n",
-      "F1 Score: 0.7795967830781095\n",
+      "Training Time: 433.70036363601685 seconds\n",
+      "Accuracy: 71.66370699223086\n",
+      "F1 Score: 0.6471620669163477\n",
       "Confusion Matrix:\n",
-      "[[34712 10338]\n",
-      " [ 9668 35382]]\n",
+      "[[41155  3895]\n",
+      " [21636 23414]]\n",
       "\n"
      ]
     },
@@ -1106,8 +1126,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\User\\anaconda3\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n"
+      "c:\\Users\\cheng\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:698: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n"
      ]
     }
    ],
@@ -1134,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1371,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1396,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
